給与事例を組みました。

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,51 @@
     <header></header>
     <main>
         <section id="keyvisual"></section>
+
         <section id="precedent">
-            <h2 class="sec_title">PRECEDENT</h2>
-            <span class="sec_title_sub">給与事例</span>
+            <div class="precedent_content navy">
+                <div class="precedent_top">
+                    <img src="assets/images/precedent/precedent_image.jpg" alt="">
+                    <div class="precedent_top_text">
+                        <h2 class="sec_title">PRECEDENT</h2>
+                        <span class="sec_title_sub">給与事例</span>
+                        <p class="regular font-notosans">全力ストレッチの給与体系は､ストレッチ業界で最高水準。<br>
+                        理想の高収入が目指せます。<br>
+                        入社○ヶ月で月収○○円に到達したトレーナーも！<br>
+                        年収1,000万円以上も､あなたの活躍次第で到達可能です。</p>
+                    </div>
+                </div>
+                <div class="precedent_bottom">
+                    <div class="precedent_bottom_item font-notosans">
+                        <img src="assets/images/precedent/precedent_sae.png" alt="">
+                        <h3 class="medium">入社○年目 SAEさん</h3>
+                        <p class="data medium">勤務務時間：160h/月<br>
+                        指名料：270,000円<br>
+                        給与：1,000,000円</p>
+                        <p class="salary white bold bg_gradient">月収<span class="price font-roboto medium">1,270,000</span>円</p>
+                    </div>
+
+                    <div class="precedent_bottom_item font-notosans">
+                        <img src="assets/images/precedent/precedent_mari.png" alt="">
+                        <h3 class="medium">入社○年目 MARIさん</h3>
+                        <p class="data medium">勤務務時間：140h/月<br>
+                            指名料：180,000円<br>
+                            給与：540,000円</p>
+                        <p class="salary white bold bg_gradient">月収<span class="price font-roboto medium">720,000</span>円</p>
+                    </div>
+
+                    <div class="precedent_bottom_item font-notosans">
+                        <img src="assets/images/precedent/precedent_norina.png" alt="">
+                        <h3 class="medium">入社○年目 NORINAさん</h3>
+                        <p class="data medium">勤務務時間：120h/月<br>
+                            指名料：153,000円<br>
+                            給与：360,000円</p>
+                        <p class="salary white bold bg_gradient">月収<span class="price font-roboto medium">513,000</span>円</p>
+                    </div>
+                </div>
+            </div>
         </section>
+
         <section id="about"></section>
 
         <section id="point">
