aboutセクションを組みました。

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>全力ストレッチ</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,7 +58,36 @@
             </div>
         </section>
 
-        <section id="about"></section>
+        <section id="about">
+            <div class="about_content">
+                <div class="about_top">
+                    <h2 class="sec_title">ABOUT</h2>
+                    <span class="sec_title_sub">全力ストレッチとは</span>
+                    <p class="font-notosans regular navy">全力ストレッチは、元格闘家オーナーの阿佐美ザウルスが編み出した<br>
+                    "ザウルス式"体幹軸調整ストレッチ。<br>
+                    スポーツトレーニングとタイ古式マッサージセラピーを融合させた、<br>
+                    美しく強いカラダを作るオリジナルのストレッチ手法です。</p>
+                    <iframe src="https://www.youtube.com/embed/5dHsz_Eritg?si=rxbI2u9ajcO1GKHi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+
+                <div class="about_bottom">
+                    <h3 class="bg_gradient white bold">芸能人やアスリートの方々が御用達</h3>
+
+                    <ul class="slider">
+                        <li><img src="assets/images/about/about_thumb_01.jpg" alt=""><h4 class="font-notosans regular navy">ゴルフ雑誌「ALBA」にてインタビュー記事が
+                            取り上げられました。</h4></li>
+                        <li><img src="assets/images/about/about_thumb_02.jpg" alt=""><h4 class="font-notosans regular navy">TBS系列「100％!アピールちゃん」で
+                            NMB48渋谷凪咲さんが通われてるところが
+                            放映されました。</h4></li>
+                        <li><img src="assets/images/about/about_thumb_03.jpg" alt=""><h4 class="font-notosans regular navy">日テレ系列「月曜から夜ふかし」でフェフ姉さんが
+                            通われているところが放映されました。</h4></li>
+                        <li><img src="assets/images/about/about_thumb_04.jpg" alt=""><h4 class="font-notosans regular navy">ゆってぃさんのYouTubeで全力ストレッチに
+                            挑んでいただきました。</h4></li>
+                    </ul>
+                </div>
+
+            </div>
+        </section>
 
         <section id="point">
             <div class="point_title">
