keyvisualを組みました。

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,42 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1><img src="assets/images/common/logo_wh.psd.png" alt="全力ストレッチ"></h1>
+        <div class="header_right">
+            <button class="button_common" type=“button” onclick="location.href='#'">WEBで簡単エントリー</button>
+        </div>
+    </header>
+
     <main>
-        <section id="keyvisual"></section>
+        <section id="keyvisual">
+            <div class="keyvisual_left">
+                <img src="assets/images/keyvisual/keyvisual_title.svg" alt="あなたが輝く最高のキャリア">
+                <p class="keyvisual_copy font-notosans bold white">未経験からでも<span class="yellow">年収<span class="ten-million font-roboto bold">1<span class="comma">,</span>000</span>万円</span>が目指せる</p>
+
+                <div class="keyvisual_left_point">
+                    <div class="keyvisual_left_point_item">
+                        <h3 class="font-roboto bold"><span class="tx_gradient point">POINT.</span><span class="tx_gradient number">01</span></h3>
+                        <p class="font-notosans bold navy">9割が未経験<br>スタート</p>
+                    </div>
+
+                    <div class="keyvisual_left_point_item">
+                        <h3 class="font-roboto bold"><span class="tx_gradient point">POINT.</span><span class="tx_gradient number">02</span></h3>
+                        <p class="font-notosans bold navy">業界最高水準の<br>給与体系</p>
+                    </div>
+
+                    <div class="keyvisual_left_point_item">
+                        <h3 class="font-roboto bold"><span class="tx_gradient point">POINT.</span><span class="tx_gradient number">03</span></h3>
+                        <p class="font-notosans bold navy">芸能人アスリート<br>御用達
+                        </p>
+                    </div>
+                </div>
+
+                WEBで簡単エントリー
+            </div>
+
+            <div class="keyvisual_right"><img src="assets/images/keyvisual/keyvisual_img.png"></div>
+        </section>
 
         <section id="precedent">
             <div class="precedent_content navy">
@@ -129,7 +162,10 @@
             </div>
         </section>
 
-        <section id="schedule"></section>
+        <section id="schedule">
+            
+        </section>
+
         <section id="interview"></section>
         <section id="area"></section>
         <section id="flow"></section>
