スケジュールセクションを編集します。

--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,16 @@
         </section>
 
         <section id="schedule">
+            <div class="point_title">
+                <h2 class="sec_title">SCHEDULE</h2>
+                <span class="sec_title_sub">仕事内容</span>
+            </div>
             
+            
+
+            トレーナーの仕事内容を動画でご紹介
+
+            <iframe width="720" height="405" src="https://www.youtube.com/embed/M15nCZH8PkI?si=cBLEOEnc6Q1NwG2x" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
 
         <section id="interview"></section>
