interviewセクションを作成しました。

--- a/src/index.html
+++ b/src/index.html
@@ -163,24 +163,94 @@
         </section>
 
         <section id="schedule">
-            <div class="point_title">
+            <div class="schedule_title">
                 <h2 class="sec_title">SCHEDULE</h2>
                 <span class="sec_title_sub">仕事内容</span>
             </div>
             
-            
+            <div class="schedule_content">
+                <h3 class="bg_gradient white bold">トレーナーの仕事内容を動画でご紹介</h3>
+                <iframe src="https://www.youtube.com/embed/M15nCZH8PkI?si=cBLEOEnc6Q1NwG2x" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-            トレーナーの仕事内容を動画でご紹介
+                <h3 class="bg_gradient white bold">トレーナーの1日の流れ</h3>
 
-            <iframe width="720" height="405" src="https://www.youtube.com/embed/M15nCZH8PkI?si=cBLEOEnc6Q1NwG2x" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <ul class="timeline">
+                    <li><!--線が伸びる基準となるHTML。liを基準として、spanに指定された線を伸ばします。-->
+                    <dl>
+                    <dt>2000</dt>
+                    <dd>内容</dd>
+                    </dl>
+                    <span class="border-line"></span>
+                    </li>
+                    <li>
+                        <dl>
+                        <dt>2002</dt>
+                        <dd>内容</dd>
+                        </dl>
+                        <span class="border-line"></span>
+                    </li>
+                    <li>
+                        <dl>
+                        <dt>2002</dt>
+                        <dd>内容</dd>
+                        </dl>
+                        <span class="border-line"></span>
+                    </li>
+                    <li>
+                    <dl>
+                    <dt>2002</dt>
+                    <dd>内容</dd>
+                    </dl>
+                    <span class="border-line"></span>
+                    </li>
+                    </ul>
+            </div>
         </section>
 
-        <section id="interview"></section>
+        <section id="interview">
+            <div>
+                <div class="schedule_title">
+                    <h2 class="sec_title">INTERVIEW</h2>
+                    <span class="sec_title_sub">先輩インタビュー</span>
+                </div>
+
+                <div class="interview_item">
+                    <img src="assets/images/interview/interview_img_01.jpg">
+                    <div class="interview_item_text">
+                        <div class="interview_item_text_name font-notosans medium navy">
+                            <span>入社○年目 〇〇店</span>
+                            <h3>〇〇さん</h3>
+                        </div>
+                        <div class="interview_item_text_qa font-notosans">
+                            <h4 class="medium lightblue">どうして全力ストレッチを選んだのか。</h4>
+                            <p class="regular navy">未経験でも研修が充実していたので始めやすかったなど。テキストテキストテキストテキストテキストテキストテキスト。</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="interview_item">
+                    <div class="interview_item_text">
+                        <div class="interview_item_text_name font-notosans medium navy">
+                            <span>入社○年目 〇〇店</span>
+                            <h3>〇〇さん</h3>
+                        </div>
+                        <div class="interview_item_text_qa font-notosans">
+                            <h4 class="medium lightblue">どうして全力ストレッチを選んだのか。</h4>
+                            <p class="regular navy">未経験でも研修が充実していたので始めやすかったなど。テキストテキストテキストテキストテキストテキストテキスト。</p>
+                        </div>
+                    </div>
+                    <img src="assets/images/interview/interview_img_01.jpg">
+                </div>
+            </div>
+        </section>
+
         <section id="area"></section>
         <section id="flow"></section>
         <section id="recruit"></section>
         <section id="entry"></section>
     </main>
     <footer></footer>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </body>
 </html>
