--- a/src/index.html
+++ b/src/index.html
@@ -244,7 +244,10 @@
             </div>
         </section>
 
-        <section id="area"></section>
+        <section id="area">
+            
+        </section>
+
         <section id="flow"></section>
         <section id="recruit"></section>
         <section id="entry"></section>
