areaセクションを作成しました。

--- a/src/index.html
+++ b/src/index.html
@@ -245,7 +245,18 @@
         </section>
 
         <section id="area">
-            
+            <div class="area_wrap">
+                <img src="assets/images/area/area_map.png" alt="">
+                <div class="area_title">
+                    <h2 class="sec_title">AREA</h2>
+                    <span class="sec_title_sub">あなたに合ったエリアで働ける</span>
+                </div>
+                <div class="area_content">
+                    <p class="bg_gradient font-notosans bold white">全力ストレッチは全国35店舗</p>
+                    <p class="bg_gradient font-notosans bold white">まだまだ出店拡大中！</p>
+                    <p class="font-notosans regular navy">一緒に全力ストレッチを育てていける<br>スタッフを募集しています。</p>
+                </div>
+            </div>
         </section>
 
         <section id="flow"></section>
