interviewを編集しました。

--- a/src/index.html
+++ b/src/index.html
@@ -256,6 +256,11 @@
                             <h4 class="medium lightblue">どうして全力ストレッチを選んだのか。</h4>
                             <p class="regular navy">未経験でも研修が充実していたので始めやすかったなど。テキストテキストテキストテキストテキストテキストテキスト。</p>
                         </div>
+
+                        <div class="interview_item_text_qa font-notosans">
+                            <h4 class="medium lightblue">現在のやりがいは？</h4>
+                            <p class="regular navy">れまでに就いた仕事に比べ、ワークライフバランスや給与、キャリアアップはどうなったか。今後はどういった未来を目指しているか、など。未来に希望が持てそうな内容にする。。</p>
+                        </div>
                     </div>
                 </div>
 
@@ -268,6 +273,11 @@
                         <div class="interview_item_text_qa font-notosans">
                             <h4 class="medium lightblue">どうして全力ストレッチを選んだのか。</h4>
                             <p class="regular navy">未経験でも研修が充実していたので始めやすかったなど。テキストテキストテキストテキストテキストテキストテキスト。</p>
+                        </div>
+
+                        <div class="interview_item_text_qa font-notosans">
+                            <h4 class="medium lightblue">現在のやりがいは？</h4>
+                            <p class="regular navy">れまでに就いた仕事に比べ、ワークライフバランスや給与、キャリアアップはどうなったか。今後はどういった未来を目指しているか、など。未来に希望が持てそうな内容にする。。</p>
                         </div>
                     </div>
                     <img src="assets/images/interview/interview_img_01.jpg">
