keyvisualを編集しました

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>全力ストレッチ</title>
+    <title>求人募集｜全力ストレッチ</title>
+    <meta name="description" content="">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,40 +12,37 @@
 </head>
 <body>
     <header>
-        <h1><img src="assets/images/common/logo_wh.psd.png" alt="全力ストレッチ"></h1>
+        <h1><img src="assets/images/common/logo_wh.png" alt="全力ストレッチ"></h1>
         <div class="header_right">
-            <button class="button_common" type=“button” onclick="location.href='#'">WEBで簡単エントリー</button>
+            <button class="gradient-btn" type="button" onclick="location.href='#'">WEBで簡単エントリー</button>
         </div>
     </header>
 
     <main>
         <section id="keyvisual">
-            <div class="keyvisual_left">
-                <img src="assets/images/keyvisual/keyvisual_title.svg" alt="あなたが輝く最高のキャリア">
-                <p class="keyvisual_copy font-notosans bold white">未経験からでも<span class="yellow">年収<span class="ten-million font-roboto bold">1<span class="comma">,</span>000</span>万円</span>が目指せる</p>
-
-                <div class="keyvisual_left_point">
-                    <div class="keyvisual_left_point_item">
-                        <h3 class="font-roboto bold"><span class="tx_gradient point">POINT.</span><span class="tx_gradient number">01</span></h3>
-                        <p class="font-notosans bold navy">9割が未経験<br>スタート</p>
+            <div class="keyvisual_content">
+                <div class="keyvisual_left">
+                    <img src="assets/images/keyvisual/keyvisual_title.svg" alt="あなたが輝く最高のキャリア">
+                    <p class="keyvisual_copy font-notosans bold white">未経験からでも<span class="yellow">年収<span class="ten-million font-roboto bold">1<span class="comma">,</span>000</span>万円</span>が目指せる</p>
+                    <div class="keyvisual_left_point">
+                        <div class="keyvisual_left_point_item">
+                            <h3 class="font-roboto bold"><span class="tx_gradient point">POINT.</span><span class="tx_gradient number">01</span></h3>
+                            <p class="font-notosans bold navy">9割が未経験<br>スタート</p>
+                        </div>
+                        <div class="keyvisual_left_point_item">
+                            <h3 class="font-roboto bold"><span class="tx_gradient point">POINT.</span><span class="tx_gradient number">02</span></h3>
+                            <p class="font-notosans bold navy">業界最高水準の<br>給与体系</p>
+                        </div>
+                        <div class="keyvisual_left_point_item">
+                            <h3 class="font-roboto bold"><span class="tx_gradient point">POINT.</span><span class="tx_gradient number">03</span></h3>
+                            <p class="font-notosans bold navy">芸能人アスリート<br>御用達
+                            </p>
+                        </div>
                     </div>
-
-                    <div class="keyvisual_left_point_item">
-                        <h3 class="font-roboto bold"><span class="tx_gradient point">POINT.</span><span class="tx_gradient number">02</span></h3>
-                        <p class="font-notosans bold navy">業界最高水準の<br>給与体系</p>
-                    </div>
-
-                    <div class="keyvisual_left_point_item">
-                        <h3 class="font-roboto bold"><span class="tx_gradient point">POINT.</span><span class="tx_gradient number">03</span></h3>
-                        <p class="font-notosans bold navy">芸能人アスリート<br>御用達
-                        </p>
-                    </div>
+                    <button class="gradient-btn" type="button" onclick="location.href='#'">WEBで簡単エントリー<img src="assets/images/common/arrow_button.svg"></button>
                 </div>
-
-                WEBで簡単エントリー
+                <div class="keyvisual_right"><img src="assets/images/keyvisual/keyvisual_img.png"></div>
             </div>
-
-            <div class="keyvisual_right"><img src="assets/images/keyvisual/keyvisual_img.png"></div>
         </section>
 
         <section id="precedent">
