precedentを編集しました。

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,8 @@
         </section>
 
         <section id="precedent">
-            <div class="precedent_content navy">
+            <div class="precedent_left"></div>
+            <div class="precedent_middle navy">
                 <div class="precedent_top">
                     <img src="assets/images/precedent/precedent_image.jpg" alt="">
                     <div class="precedent_top_text">
@@ -87,6 +88,7 @@
                     </div>
                 </div>
             </div>
+            <div class="precedent_right"></div>
         </section>
 
         <section id="about">
