--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
+    <!-- Media -->
+    <link rel="stylesheet" type="text/css" href="assets/css/slick.css"/>
 </head>
 <body>
     <header>
         <h1><img src="assets/images/common/logo_wh.png" alt="全力ストレッチ"></h1>
         <div class="header_right">
-            <button class="gradient-btn" type="button" onclick="location.href='#'">WEBで簡単エントリー</button>
+            <button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー</button>
         </div>
     </header>
 
@@ -39,7 +41,7 @@
                             </p>
                         </div>
                     </div>
-                    <button class="gradient-btn" type="button" onclick="location.href='#'">WEBで簡単エントリー<img src="assets/images/common/arrow_button.svg"></button>
+                    <button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<img src="assets/images/common/arrow_button.svg"></button>
                 </div>
                 <div class="keyvisual_right"><img src="assets/images/keyvisual/keyvisual_img.png"></div>
             </div>
@@ -53,10 +55,10 @@
                     <div class="precedent_top_text">
                         <h2 class="sec_title">PRECEDENT</h2>
                         <span class="sec_title_sub">給与事例</span>
-                        <p class="regular font-notosans">全力ストレッチの給与体系は､ストレッチ業界で最高水準。<br>
+                        <p class="regular font-notosans">全力ストレッチの給与体系は､<br class="tb_only">ストレッチ業界で最高水準。<br>
                         理想の高収入が目指せます。<br>
                         入社○ヶ月で月収○○円に到達したトレーナーも！<br>
-                        年収1,000万円以上も､あなたの活躍次第で到達可能です。</p>
+                        年収1,000万円以上も､<br class="tb_only">あなたの活躍次第で到達可能です。</p>
                     </div>
                 </div>
                 <div class="precedent_bottom">
@@ -89,6 +91,9 @@
                 </div>
             </div>
             <div class="precedent_right"></div>
+
+            <img class="precedent_bg_01" src="assets/images/common/slash_01.svg">
+            <img class="precedent_bg_02" src="assets/images/common/slash_03.svg">
         </section>
 
         <section id="about">
@@ -106,24 +111,33 @@
                 <div class="about_bottom">
                     <h3 class="bg_gradient white bold">芸能人やアスリートの方々が御用達</h3>
 
-                    <!-- <ul class="slider">
-                        <li><img src="assets/images/about/about_thumb_01.jpg" alt=""><h4 class="font-notosans regular navy">ゴルフ雑誌「ALBA」にてインタビュー記事が
-                            取り上げられました。</h4></li>
-                        <li><img src="assets/images/about/about_thumb_02.jpg" alt=""><h4 class="font-notosans regular navy">TBS系列「100％!アピールちゃん」で
-                            NMB48渋谷凪咲さんが通われてるところが
-                            放映されました。</h4></li>
-                        <li><img src="assets/images/about/about_thumb_03.jpg" alt=""><h4 class="font-notosans regular navy">日テレ系列「月曜から夜ふかし」でフェフ姉さんが
-                            通われているところが放映されました。</h4></li>
-                        <li><img src="assets/images/about/about_thumb_04.jpg" alt=""><h4 class="font-notosans regular navy">ゆってぃさんのYouTubeで全力ストレッチに
-                            挑んでいただきました。</h4></li>
-                    </ul> -->
+                    <ul class="about_slick">
+                        <li><img src="assets/images/about/about_thumb_01.jpg" alt=""><h4 class="font-notosans regular navy">ゴルフ雑誌「ALBA」にてインタビュー記事が<br>
+                        取り上げられました。</h4></li>
+                        <li><img src="assets/images/about/about_thumb_02.jpg" alt=""><h4 class="font-notosans regular navy">TBS系列「100％!アピールちゃん」で<br>
+                        NMB48渋谷凪咲さんが通われてるところが<br>
+                        放映されました。</h4></li>
+                        <li><img src="assets/images/about/about_thumb_03.jpg" alt=""><h4 class="font-notosans regular navy">日テレ系列「月曜から夜ふかし」でフェフ姉さんが<br>
+                        通われているところが放映されました。</h4></li>
+                        <li><img src="assets/images/about/about_thumb_04.jpg" alt=""><h4 class="font-notosans regular navy">ゆってぃさんのYouTubeで全力ストレッチに<br>
+                        挑んでいただきました。</h4></li>
+                    </ul>
 
-                    <div class="slider">   
+                    <!-- <div class="slider">   
                         <div><img src="assets/images/about/about_thumb_01.jpg"></div>
                         <div><img src="assets/images/about/about_thumb_02.jpg"><div>   
                         <div><img src="assets/images/about/about_thumb_03.jpg"></div>
                         <div><img src="assets/images/about/about_thumb_04.jpg"></div>
-                    </div>
+                    </div> -->
+
+                    <!-- <div class="swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="assets/images/about/about_thumb_01.jpg" alt="sample"></div>
+                            <div class="swiper-slide"><img src="assets/images/about/about_thumb_02.jpg" alt="sample"></div>
+                            <div class="swiper-slide"><img src="assets/images/about/about_thumb_03.jpg" alt="sample"></div>
+                            <div class="swiper-slide"><img src="assets/images/about/about_thumb_04.jpg" alt="sample"></div>
+                        </div>
+                    </div> -->
                 </div>
 
             </div>
@@ -236,10 +250,12 @@
                     </li>
                 </ul>
             </div>
+            <img class="schedule_bg" src="assets/images/common/slash_03.svg">
         </section>
 
         <section id="interview">
-            <div class="interview_wrap">
+            <div class="interview_left"></div>
+            <div class="interview_middle">
                 <div class="schedule_title">
                     <h2 class="sec_title">INTERVIEW</h2>
                     <span class="sec_title_sub">先輩インタビュー</span>
@@ -283,6 +299,9 @@
                     <img src="assets/images/interview/interview_img_01.jpg">
                 </div>
             </div>
+            <div class="interview_right"></div>
+
+            <img class="interview_bg" src="assets/images/common/slash_01.svg">
         </section>
 
         <section id="area">
@@ -300,12 +319,54 @@
             </div>
         </section>
 
-        <section id="flow"></section>
+        <section id="flow">
+            <div class="slider-controls">
+                <ul class="indicators" role="list">
+                    <li class="indicator fs-14 font-zenkaku light-gray active" data-slide-index="0">01</li>
+                    <li class="indicator fs-14 font-zenkaku light-gray" data-slide-index="1">02</li>
+                    <li class="indicator fs-14 font-zenkaku light-gray" data-slide-index="2">03</li>
+                    <li class="indicator fs-14 font-zenkaku light-gray" data-slide-index="3">04</li>
+                    <li class="indicator fs-14 font-zenkaku light-gray" data-slide-index="4">05</li>
+                </ul>
+                <div class="slider-buttons">
+                    <button class="prev slider-btn" id="slider-prev"><img src="./assets/images/common/arrow_prev.svg" alt="previous" class="prev_img"></button>
+                    <button class="next slider-btn" id="slider-next"><img src="./assets/images/common/arrow_next.svg" alt="next" class="next_img"></button>
+                </div>
+            </div>
+
+            <div class="insp-slider">
+                <div class="card">
+                    <div class="card-inner">
+                        <div class="before slide_item">
+                            <p class="font-bellefair ba_label fs-16">BEFORE</p>
+                            <!-- <img src="./assets/images/inspiration/before.jpg" alt="before" class="slide_img"> -->
+                        </div>
+                        <div class="after slide_item">
+                            <p class="font-bellefair ba_label">AFTER</p>
+                            <!-- <img src="./assets/images/inspiration/after.jpg" alt="after" class="slide_img"> -->
+                        </div>
+                    </div>
+                </div>
+                
+                </div>
+            </div>
+
+            <div class="flow_calltoaction">
+                <div class="flow_calltoaction_content">
+                    <h3 class="font-notosans medium navy">理想の未来に､</h3>
+                    <h3 class="font-notosans medium navy">一歩踏み出そう｡</h3>
+                    <p class="font-notosans bold white">今エントリーされた方に限り､資格講習費の<span class="cta_number">10</span>万円が<span>0</span>円で<br>
+                    ZSTA協会認定トレーナー資格が取得できるキャンペーン中！</p>
+                    <button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<img src="assets/images/common/arrow_button.svg"></button>
+                </div>
+                <!-- <img src="assets/images/flow/flow_cta_img.png"> -->
+            </div>
+        </section>
 
         <section id="recruit">
             <div class="recruit_title">
-                <h2 class="sec_title">SCHEDULE</h2>
-                <span class="sec_title_sub">仕事内容</span>
+                <h2 class="sec_title">RECRUIT</h2>
+                <span class="sec_title_sub">募集要項</span>
             </div>
 
             <div class="recruit_content">
@@ -422,6 +483,11 @@
         
     </footer>
 
+    <!-- Media -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="assets/js/slick.min.js"></script>
+    <script type="text/javascript" src="assets/js/common.js"></script>
+    <!-- Timeline -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </body>
 </html>
