--- a/src/index.html
+++ b/src/index.html
@@ -109,10 +109,10 @@
                 </div>
 
                 <div class="about_bottom">
-                    <h3 class="bg_gradient white bold">芸能人やアスリートの方々が御用達</h3>
+                    <h3 class="bg_gradient font-notosans white bold">芸能人やアスリートの方々が御用達</h3>
 
                     <ul class="about_slick">
-                        <li><img src="assets/images/about/about_thumb_01.jpg" alt=""><h4 class="font-notosans regular navy">ゴルフ雑誌「ALBA」にてインタビュー記事が<br>
+                        <li><img src="assets/images/about/about_thumb_01.jpg" alt=""><h4 class="font-notosans regular navy">ゴルフ雑誌「ALBA」にて<br>インタビュー記事が<br>
                         取り上げられました。</h4></li>
                         <li><img src="assets/images/about/about_thumb_02.jpg" alt=""><h4 class="font-notosans regular navy">TBS系列「100％!アピールちゃん」で<br>
                         NMB48渋谷凪咲さんが通われてるところが<br>
@@ -190,10 +190,10 @@
             </div>
             
             <div class="schedule_content">
-                <h3 class="bg_gradient white bold">トレーナーの仕事内容を動画でご紹介</h3>
+                <h3 class="bg_gradient font-notosans white bold">トレーナーの仕事内容を動画でご紹介</h3>
                 <iframe src="https://www.youtube.com/embed/M15nCZH8PkI?si=cBLEOEnc6Q1NwG2x" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-                <h3 class="bg_gradient white bold">トレーナーの1日の流れ</h3>
+                <h3 class="bg_gradient font-notosans white bold">トレーナーの1日の流れ</h3>
 
                 <ul class="timeline">
                     <li><!--線が伸びる基準となるHTML。liを基準として、spanに指定された線を伸ばします。-->
@@ -250,7 +250,7 @@
                     </li>
                 </ul>
             </div>
-            <img class="schedule_bg" src="assets/images/common/slash_03.svg">
+            <!-- <img class="schedule_bg" src="assets/images/common/slash_03.svg"> -->
         </section>
 
         <section id="interview">
@@ -275,7 +275,7 @@
 
                         <div class="interview_item_text_qa font-notosans">
                             <h4 class="medium lightblue">現在のやりがいは？</h4>
-                            <p class="regular navy">れまでに就いた仕事に比べ、ワークライフバランスや給与、キャリアアップはどうなったか。今後はどういった未来を目指しているか、など。未来に希望が持てそうな内容にする。。</p>
+                            <p class="regular navy">れまでに就いた仕事に比べ、ワークライフバランスや給与、キャリアアップはどうなったか。今後はどういった未来を目指しているか、など。未来に希望が持てそうな内容にする。</p>
                         </div>
                     </div>
                 </div>
@@ -293,7 +293,7 @@
 
                         <div class="interview_item_text_qa font-notosans">
                             <h4 class="medium lightblue">現在のやりがいは？</h4>
-                            <p class="regular navy">れまでに就いた仕事に比べ、ワークライフバランスや給与、キャリアアップはどうなったか。今後はどういった未来を目指しているか、など。未来に希望が持てそうな内容にする。。</p>
+                            <p class="regular navy">れまでに就いた仕事に比べ、ワークライフバランスや給与、キャリアアップはどうなったか。今後はどういった未来を目指しているか、など。未来に希望が持てそうな内容にする。</p>
                         </div>
                     </div>
                     <img src="assets/images/interview/interview_img_01.jpg">
