flowのカルーセルとボタンを編集しました。

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
                             </p>
                         </div>
                     </div>
-                    <button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<img src="assets/images/common/arrow_button.svg"></button>
+                    <button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></button>
                 </div>
                 <div class="keyvisual_right"><img src="assets/images/keyvisual/keyvisual_img_1.png"></div>
             </div>
@@ -341,11 +341,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="flow_top_right"></div>
+                <!-- <div class="flow_top_right"></div> -->
             </div>
 
             <div class="flow_bottom">
-                <div class="flow_bottom_left"></div>
+                <!-- <div class="flow_bottom_left"></div> -->
                 <div class="insp-slider">
                     <!-- Step1 -->
                     <div class="card">
@@ -403,7 +403,7 @@
                         </div>
                     </div>
                     <!-- Step4 -->
-                    <div class="card">
+                    <div class="card step4">
                         <div class="card-inner">
                             <div class="card_left">
                                 <img src="assets/images/flow/flow_img_04.jpg">
@@ -438,7 +438,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="flow_bottom_right"></div>
+                <!-- <div class="flow_bottom_right"></div> -->
             </div>
 
             <div class="flow_calltoaction">
@@ -447,7 +447,7 @@
                     <h3 class="font-notosans medium navy">一歩踏み出そう｡</h3>
                     <p class="font-notosans bold white">今エントリーされた方に限り､資格講習費の<span>10</span>万円が<span class="cta_number">0</span>円で<br>
                     ZSTA協会認定トレーナー資格が取得できるキャンペーン中！</p>
-                    <button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<img src="assets/images/common/arrow_button.svg"></button>
+                    <button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></button>
                 </div>
                 <!-- <img src="assets/images/flow/flow_cta_img.png"> -->
             </div>
